Fix code blocks in anchor links bumping up too high

--- a/discord/styles/theme.css
+++ b/discord/styles/theme.css
@@ -243,7 +243,6 @@ Fix code blocks inside links that break page width
     word-break: break-all;
     overflow-wrap: break-word;
     max-width: 100%;
-    display: inline-block;
 }
 
 /*
